log/build_2023-01-31_19-22-44/py_pubsub/stderr.log
  File "/home/dunto/demo_ws/install/py_pubsub/lib/python3.8/site-packages/py_pubsub/publisher_member_function.py", line 98
    global screen = pygame.display.set_mode((width, height))
                  ^
SyntaxError: invalid syntax

